Issue CXDEVII-1743: Button under banner text on small screens.

--- a/aegon-sass-library/components/_messages.scss
+++ b/aegon-sass-library/components/_messages.scss
@@ -47,25 +47,21 @@
     background-color: $blue;
     color: $white;
 
-    .wrap {
-      margin: 0 0 15px 0;
-    }
-
     .header {
       color: $white;
       margin-bottom: 5px;
     }
-    .content {
-      width: 100%;
-      display: table;
+   .content {
+      display: block;
       p {
-        padding-right: 20px;
-        display: table-cell;
+        @include rem('font-size',  18px);
+        padding: 0 0 15px 0;
+        display: block;
       }
       button {
-        display: table-cell;
+        display: block;
       }
-    }
+     }
   }
 
   &.messages--functional {
@@ -100,7 +96,7 @@
     .content {
       position: relative;
       width: 55%;
-      font-size: 10px;
+//      font-size: 10px;
       line-height: 12px;
       display: inline-block;
       color: $white;
@@ -214,6 +210,17 @@
       .icon:before {
         content: '\e636';
         color: $white;
+      }
+      .content {
+        width: 100%;
+        display: table;
+        p {
+          padding-right: 20px;
+          display: table-cell;
+        }
+        button {
+          display: table-cell;
+        }
       }
     }
   }
